[package]
name = "tcp-over-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio = { version = "1.20", features = ["net", "rt"] }
clap = { version = "3.2.16", features = ["derive"] }
rand = "0.8"
async-trait = "0.1.57"
base64 = "0.13"
hyper = { version = "0.14.20", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5"
nats = "*"
protobuf = { version = "~2.0" }
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
